# JaIM

./: Cargo.toml  README.md
data/: jaim.xml
fcitx5/: CMakeLists.txt  jaim-addon.conf  jaim-im.conf  jaim_engine.cpp  jaim_engine.h  jaim_ffi.h
scripts/: jaim-llm-server.service
src/: ffi.rs  lib.rs  main.rs
src/core/: mod.rs  user_scorer.rs
src/core/dictionary/: builtin_dict.rs  mod.rs  trie.rs
src/core/grammar/: mod.rs
src/core/llm/: http_scorer.rs  llama_scorer.rs  mod.rs
src/core/romaji/: mod.rs  romaji_table.rs
src/engine/: mod.rs
src/ibus/: config.rs  engine_impl.rs  factory.rs  keymap.rs  mod.rs
