[package]
name = "jaim"
version = "0.1.0"
edition = "2024"
authors = ["Yoshihiro NAKAHARA"]
description = "Japanese AI-powered Input Method - LLM-based intelligent Japanese input for Linux"
license = "MIT"
repository = "https://github.com/BonoJovi/JaIM"

[dependencies]
# D-Bus for IBus integration
zbus = "5"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"
