[package]
name = "jaim"
version = "0.9.0"
edition = "2024"
authors = ["Yoshihiro NAKAHARA"]
description = "Japanese AI-powered Input Method - LLM-based intelligent Japanese input for Linux"
license = "MIT"
repository = "https://github.com/BonoJovi/JaIM"

[dependencies]
# D-Bus for IBus integration
zbus = "5"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"
# Character encoding (EUC-JP for IPADIC)
encoding_rs = "0.8"
# LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1"

[[bin]]
name = "generate-dict"
path = "src/bin/generate_dict.rs"
