[package]
name = "jaim"
version = "1.1.0"
edition = "2024"
authors = ["Yoshihiro NAKAHARA"]
description = "Japanese AI-powered Input Method - LLM-based intelligent Japanese input for Linux"
license = "MIT"
repository = "https://github.com/BonoJovi/JaIM"

[lib]
name = "jaim"
crate-type = ["cdylib", "rlib"]

[dependencies]
# D-Bus for IBus integration
zbus = "5"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"
# Character encoding (EUC-JP for IPADIC)
encoding_rs = "0.8"
# HTTP client for LLM server communication
ureq = { version = "3", features = ["json"] }

[[bin]]
name = "generate-dict"
path = "src/bin/generate_dict.rs"
